# Powerball

./: Dockerfile  README.md  app.py  ingest.py  pyproject.toml  requirements.txt
